--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Roboto', sans-serif;
+
   margin: 0;
   min-height: 100vh;
   display: flex;
@@ -9,7 +10,7 @@ body {
 
 .header {
   height: 72px;
-  background: darkmagenta;
+  background: #1F2937;
   color: white;
   display: flex;
   font-size: 32px;
@@ -20,14 +21,14 @@ body {
 
 .footer {
   height: 72px;
-  background: #eee;
-  color: darkmagenta;
+  background: #1F2937;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.body {
+#main-container {
   display: flex;
   flex: 1;
 }
@@ -39,13 +40,20 @@ body {
   gap: 32px;
 }
 
-.sidebar {
-  width: 300px;
-  background: royalblue;
-  box-sizing: border-box;
-  flex-shrink: 0;
-  padding: 16px;
+.container-quotes {
+  background: #E5E7EB;
+  font-size: 36px;
+  font-style: italic;
+  color: #1F2937;
+
 }
+
+.quote-text {
+  font-size: 24px;
+  font-weight: bold;
+  font-style:normal;
+}
+
 
 .card {
   border: 1px solid #eee;
