--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
   box-sizing: border-box;
 }
 
-
 /* HEADER AND FOOTER */
 .header {
   height: 90px;
@@ -106,7 +105,7 @@ img.icon:hover, img.contact-icon:hover {
   font-weight: bold;
   padding: 15px 25px 5px 25px;
   color: #ED9B33;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); Shadow
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Shadow */
 }
 
 .secondary-text {
@@ -114,8 +113,6 @@ img.icon:hover, img.contact-icon:hover {
   padding: 10px 48px;
   color: #001E60;
 }
-
-
 
 .container-servicios {
   position: relative; /* Establishes positioning context for the pseudo-element */
@@ -145,17 +142,13 @@ img.icon:hover, img.contact-icon:hover {
   }
 }
 
-
-
-
-
 .first-level {
   display: flex;
   flex-direction: column;
   list-style-type: none; /* Removes bullets from the first level */
   padding: 0 15px 5px 15px;            /* Removes default padding */
   margin: 0;             /* Removes default margin */
-  text-shadow: 0 0 4px rgba(255, 255, 255, 1); Shadow
+  text-shadow: 0 0 4px rgba(255, 255, 255, 1);
 }
 
 .second-level {
@@ -171,8 +164,6 @@ li {
 }
 
 
-
-
 .container-multimedia {
   background-image: url('resources/contourns-background.svg'); /* Change to .png or .jpg if used */
   background-size: cover; /* Adjusts the image to cover the entire background */
@@ -180,6 +171,47 @@ li {
   background-position: center; /* Centers the background image */
 
 }
+
+.video-container {
+  position: relative;
+  width: 100%; /* The container will take the full width of its parent */
+  max-width: 720px; /* Optional: limit the maximum width */
+  margin: 20px auto; /* Centers the video within its container and adds some space */
+  aspect-ratio: 16 / 9; /* Maintains the 16:9 ratio */
+  overflow: hidden; /* Ensures no overflow of video */
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none; /* Removes the border around the video */
+}
+
+.video-toggle {
+  cursor: pointer; /* Change cursor to pointer to indicate it's clickable */
+  color: white; /* Change text color to white */
+  background-color: #001E60; /* Button background color */
+  border: none; /* Remove border */
+  border-radius: 5px; /* Rounded corners */
+  padding: 10px 20px; /* Add padding for spacing */
+  text-align: center; /* Center text */
+  display: inline-block; /* Allow padding and dimensions */
+  font-size: 18px; /* Increase font size */
+  transition: background-color 0.3s ease, transform 0.2s ease; /* Smooth transition for hover effects */
+}
+
+.video-toggle:hover {
+  background-color: #d49329; /* Darker shade on hover */
+  transform: scale(1.05); /* Slightly enlarge on hover */
+}
+
+
+
+
+
 /* 
 .container-quotes {
   background: #E5E7EB;
@@ -203,8 +235,9 @@ li {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  width: 300px;
+  max-width: 760px;
   padding: 16px;
+
 }
 
 
